fix overflow on dev-ribbon.

--- a/less/components/dev-ribbon.less
+++ b/less/components/dev-ribbon.less
@@ -1,3 +1,14 @@
+.dev-ribbon-holder {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  z-index: 1000;
+  pointer-events: none;
+}
+
 a.dev-ribbon {
   display: block;
   position: absolute;
@@ -7,11 +18,11 @@ a.dev-ribbon {
   background: gray;
   color: white;
   font-size: 1.5rem;
-  z-index: 1000;
   font-weight: 700;
   text-transform: uppercase;
   transform-origin: top right;
   transform: rotate(45deg) translate(10rem, 5rem);
+  pointer-events: auto;
 }
 
 a.dev-ribbon:hover, a.dev-ribbon:focus {
